final version of embedded Xvfb X11 server with vnc/Remmina desktop

--- a/ubuntu-20.04-x11vnc/Dockerfile
+++ b/ubuntu-20.04-x11vnc/Dockerfile
@@ -36,6 +36,6 @@ WORKDIR /home/$USERNAME
 ADD --chown=root:root ./start-x11-vnc.sh /usr/bin/
 
 # Run graphical terminal app from container with display forwared to host
-CMD [ "/usr/bin/xterm" ]
-#CMD /usr/bin/bash /usr/bin/start-x11-vnc.sh
+#CMD [ "/usr/bin/xterm" ]
+CMD /usr/bin/bash /usr/bin/start-x11-vnc.sh
 
